--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,9 @@
 
 div.image {
   position: relative;
-  margin: 5rem;
+  margin: 5vw;
+  max-width: 100%;
+  height: auto;
 }
 
 img {
@@ -24,7 +26,7 @@ h1.time {
   color: orangered;
   text-shadow: 0px 0px 10px red;
   font-family: Seven Segment;
-  font-size: calc((100vw - 10rem) / 22);
+  font-size: calc(90vw / 22);
   padding-left: 46.75%;
   padding-top: 15%;
 }
